--- a/PICPAK/package.json
+++ b/PICPAK/package.json
@@ -9,17 +9,23 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.9.4",
     "expo": "~39.0.2",
+    "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
+    "native-base": "^2.13.15",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-animated-searchbox": "0.0.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
