--- a/PICPAK/package.json
+++ b/PICPAK/package.json
@@ -11,16 +11,22 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "^1.9.4",
     "expo": "~39.0.2",
+    "expo-camera": "~9.0.0",
     "expo-firebase-recaptcha": "^1.3.0",
     "expo-font": "~8.3.0",
+    "expo-image-picker": "~9.1.1",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
+    "gl-react": "^5.0.0",
     "native-base": "^2.13.15",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-animated-searchbox": "0.0.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-image-filter": "^1.0.3",
+    "react-native-image-filter-kit": "^0.7.3",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-responsive-fontsize": "^0.5.0",
@@ -29,13 +35,13 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "10.7.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "react-native-webview": "10.7.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
