--- a/restaurant-review-app/package.json
+++ b/restaurant-review-app/package.json
@@ -11,8 +11,10 @@
     "@expo/vector-icons": "^12.0.0",
     "@firebase/firestore": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.10",
-    "expo": "~40.0.0",
+    "add": "^2.0.6",
+    "expo": "^40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
     "expo-location": "~10.0.0",
@@ -22,6 +24,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-geolocation-service": "^5.1.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-google-places-autocomplete": "^2.1.2",
     "react-native-maps": "0.27.1",
