--- a/PICPAK/package.json
+++ b/PICPAK/package.json
@@ -47,6 +47,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.0",
+    "react-native-view-shot": "3.1.2",
     "react-native-web": "~0.13.12",
     "react-native-webview": "10.7.0",
     "react-navigation": "^4.4.3",
@@ -55,7 +56,8 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "react-native-view-shot": "3.1.2"
+    "use-memo-one": "^1.1.1",
+    "expo-contacts": "~8.5.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
