--- a/restaurant-review-app/package.json
+++ b/restaurant-review-app/package.json
@@ -18,12 +18,14 @@
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
     "expo-location": "~10.0.0",
+    "expo-mail-composer": "~9.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "native-base": "^2.15.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-animated-spinkit": "^1.5.0",
     "react-native-geolocation-service": "^5.1.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-google-places-autocomplete": "^2.1.2",
