--- a/restaurant-review-app/package.json
+++ b/restaurant-review-app/package.json
@@ -21,6 +21,7 @@
     "expo-mail-composer": "~9.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
+    "moment": "^2.29.1",
     "native-base": "^2.15.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
