--- a/PICPAK/package.json
+++ b/PICPAK/package.json
@@ -18,6 +18,7 @@
     "buffer": "^6.0.3",
     "expo": "~39.0.2",
     "expo-camera": "~9.0.0",
+    "expo-contacts": "~8.5.0",
     "expo-file-system": "~9.2.0",
     "expo-firebase-recaptcha": "^1.3.0",
     "expo-font": "~8.3.0",
@@ -36,6 +37,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-animated-searchbox": "0.0.1",
+    "react-native-animated-spinkit": "^1.5.1",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-gl-image-filters": "^0.2.2",
     "react-native-image-filter": "^1.0.3",
@@ -56,8 +58,7 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "use-memo-one": "^1.1.1",
-    "expo-contacts": "~8.5.0"
+    "use-memo-one": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
