--- a/rent-a-car-app/package.json
+++ b/rent-a-car-app/package.json
@@ -14,15 +14,17 @@
     "@react-native-community/picker": "1.6.0",
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
     "expo-location": "~8.2.1",
     "expo-notifications": "~0.3.3",
     "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "firebase": "7.9.0",
-    "native-base": "^2.13.12",
+    "native-base": "^2.15.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-animated-spinkit": "^1.5.1",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.27.1",
@@ -39,8 +41,7 @@
     "react-navigation-tabs": "^2.9.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-image-picker": "~8.3.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
